button redirects, each group now clickable on my groups page, fixed footer spacing issues

--- a/style.css
+++ b/style.css
@@ -30,6 +30,26 @@ html, body, footer, footer a {
   transform: translateY(-50%);
 }
 
+/* colour of text on hover (my groups page) */
+.clickableDiv a:hover {
+  text-decoration:none;
+  color: #d8d8d8;
+}
+
+/* colour of text (my groups page) */
+.clickableDiv a {
+  color: #f2f2f2;
+}
+
+/* style of each groups div (my groups page) */
+.clickableDiv {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 6px;
+  padding-top: 5px;
+  margin-bottom: 7px;
+  width: 100%;
+}
+
 /* size of 'join group' button on aboutgroups page */
 .createjoin {
   width: 180px;
@@ -114,6 +134,8 @@ html, body, footer, footer a {
 }
 
 
+
+
 /* copyright in footer */
 #copyright {
   background-color: #232F3C;
@@ -125,6 +147,7 @@ img.mr-2 {
   height: 100px;
   border: 1px solid #8c8c8c;
 }
+
 
 /* ID Selectors */
 
